tests/baselines/reference/evalAfter0.symbols
=== tests/cases/compiler/evalAfter0.ts ===
(0,eval)("10"); // fine: special case for eval
>eval : Symbol(eval, Decl(lib.es5.d.ts, --, --))

declare var eva;
>eva : Symbol(eva, Decl(evalAfter0.ts, 2, 11))

(0,eva)("10"); // error: no side effect left of comma (suspect of missing method name or something)
>eva : Symbol(eva, Decl(evalAfter0.ts, 2, 11))

